# minishell-rs

./: .clang-tidy  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  c2rust-lib.rs  lexerstuff.sh  project.yml  rust-toolchain.toml
.github/workflows/: main.yml
include/: commands.h  environment.h  execution.h  expander.h  external.h  lexer.h  minishell.h  msh_signals.h  parser.h  struct.h  tokens.h  utils.h
src/: append_array.c  bool_array.c  data.rs  environment.rs  execution.rs  init.c  lexer.c  lexer.rs  main.c  main.rs  msh.rs  prelude.rs  remove_array.c  while_string_wrapper.c
src/builtins/: builtin_cd.c  builtin_cd.rs  builtin_echo.c  builtin_echo.rs  builtin_env.c  builtin_env.rs  builtin_exit.c  builtin_exit.rs  builtin_export.c  builtin_export.rs  builtin_pwd.c  builtin_pwd.rs  builtin_unset.c  builtin_unset.rs  builtins.c  builtins.h  cd.c  cd.rs  commands.h  echo.c  echo.rs  env.c  env.rs  execute_commands.c  exit.c  exit.rs  export.c  export.rs  pwd.c  pwd.rs  unset.c  unset.rs
src/env/: add_var.c  env.h  export.c  find_key.c  read_var.c  remove_array.c  remove_var.c  unset.c
src/environment/: check_key.c  check_key.rs  env_var.c  environment.h  expander.c  expander.rs  expander_c.rs  export_env.c  export_env.rs  export_var.c  find_key.c  get_env.c  get_env.rs  get_env_var.c  get_index.c  get_index.rs  key.c  mod.rs  tests_expander.rs
src/execution/: bin_path.c  bin_path.rs  exec_bin.c  exec_bin.rs  exec_utils.c  execute_commands.c  execute_commands.rs  execute_pipes.c  execute_pipes.rs  heredoc.c  heredoc.rs  mod.rs  redirections.c  redirections.rs
src/executor/: a.out  executils.c  execution.c
src/exit/: msh_cleanup.c
src/expander/: expand.c  expand_var.c  expander.c  (+3 more)
test/: test_bool_arr.c  test_lexer.c  test_wrapper.c
tests/: lexer_test.rs
(+129 files in other folders)
