cargo-features = ["edition2024"]
[workspace]
members = []
[package]
name = "minishell-rs"
authors = ["Jonstep101010"]
version = "0.0.0"
publish = false
edition = "2024"
autobins = false

[[bin]]
path = "src/main.rs"
name = "minishell-rs"
[dependencies]
libc = "0.2"
gnu-readline-sys = "0.1.0"
libft_rs = { package = "libft_rs", git = "https://github.com/Jonstep101010/libft-rs", branch = "main" }
libutils_rs = { package = "libutils_rs", git = "https://github.com/Jonstep101010/libutils-rs", branch = "main" }
bacon = "3.7.0"
nix = { version = "0.29.0", features = ["fs", "process", "term"] }
rstest = "0.24.0"
