cargo-features = ["edition2024"]
[workspace]
members = []
[package]
name = "minishell-rs"
authors = ["Jonstep101010"]
version = "0.0.0"
publish = false
edition = "2024"
autobins = false

[[bin]]
path = "src/main.rs"
name = "minishell-rs"
[dependencies]
libc = "0.2"
nix = { version = "0.29.0", features = ["fs", "process", "term"] }
rstest = "0.24.0"
rustyline = "15.0.0"
